syntax = "proto3";  // 指定使用 proto3 语法
import "google/protobuf/empty.proto";  // 导入 Google 的空消息类型
option go_package = "./;proto";  // 指定生成的 Go 包路径

service User {
    // 定义 User 服务
    rpc GetUserList(PageInfo) returns (UserListResponse); // 获取用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // 通过手机号查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse); // 通过 ID 查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 添加用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); // 检查密码
}

message PasswordCheckInfo {
    string password = 1;  // 明文密码
    string encryptedPassword = 2;  // 加密后的密码
}

message CheckResponse {
    bool success = 1;  // 密码检查是否功
}

message PageInfo {
    uint32 pn = 1;  // 页码
    uint32 pSize = 2;  // 每页大小
}

message MobileRequest {
    string mobile = 1;  // 手机号码
}

message IdRequest {
    int32 id = 1;  // 用户 ID
}

message CreateUserInfo {
    string nickName = 1;  // 用户昵称
    string passWord = 2;  // 用户密码
    string mobile = 3;  // 用户手机号
}

message UpdateUserInfo {
    int32 id = 1;  // 用户 ID
    string nickName = 2;  // 用户昵称
    string gender = 3;  // 用户性别
    uint64 birthDay = 4;  // 用户生日，使用时间戳表示
}

message UserInfoResponse {
    int32 id = 1;  // 用户 ID
    string passWord = 2;  // 用户密码
    string mobile = 3;  // 用户手机号
    string nickName = 4;  // 用户昵称
    uint64 birthDay = 5;  // 用户生日，使用时间戳表示
    string gender = 6;  // 用户性别
    int32 role = 7;  // 用户角色
}

message UserListResponse {
    int32 total = 1;  // 总用户数
    repeated UserInfoResponse data = 2;  // 用户信息列表
}
